Set SWP_NOCOPYBITS when resizing translucent windows.

This seems to fix the black flashing that was happening with the
extension popup UI. WS_EX_COMPOSITED was originally hiding this issue in
most cases (except possibly http://crbug.com/586454 ), possibly because
it didn't allow GDI painting outside of WM_PAINT (like is happening here).

Bug: 739724
Change-Id: I897deedb3bf7f2c2ff799cb24a98e0f94f835ea9
Reviewed-on: https://chromium-review.googlesource.com/564147
Reviewed-by: Scott Violet <sky@chromium.org>
Reviewed-by: Ananta Iyengar <ananta@chromium.org>
Commit-Queue: John Bauman <jbauman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#487963}
Former-commit-id: 64dd9570929e2427dbd76cc6ccc30892fa849f4b